# ComputerVisionImageClassification

./: .gitignore  main.py  pyproject.toml  requirements.txt  scores.json  template.py
ImageClassifier.egg-info/: PKG-INFO
artifacts/data_ingestion/: Chest-CT-Scan-data.dvc
research/: model_evaluation_with_mlflow.ipynb  model_trainer.ipynb  prepare_basemodel.ipynb  trials.ipynb
src/ImageClassifier.egg-info/: SOURCES.txt  requires.txt
src/ImageClassifier/components/: data_ingestion.py  model_evaluation.py  model_trainer.py  prepare_base_model.py
src/ImageClassifier/config/: configuration.py
src/ImageClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_trainer.py  stage_04_model_evaluation.py
src/ImageClassifier/utils/: common.py
